--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,11 @@ h1 {
 }
 div {
 	font-family: Arial;
-	height: 80px;
-	width: 18%;
+	height: 120px;
+	width: 20%;
 	margin-bottom: 1%;
+	margin-left: 1%;
+	display: inline-block;
 }
 .yellow {
 	background-color: yellow;
@@ -15,7 +17,7 @@ div {
 	background-color: red;
 }
 .pdl5 {
-	padding-left: 5%;
+	padding-left: 1%;
 }
 .pdt5{
 	padding-top: 1%;
