--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,11 @@ h1 {
 	color: #4454F0;
 }
 div {
-	font-family: Arial;
-	height: 120px;
+	height: 20px;
 	width: 20%;
 	margin-bottom: 1%;
 	margin-left: 1%;
-	display: inline-block;
+	display: inline;
 }
 .yellow {
 	background-color: yellow;
@@ -23,5 +22,5 @@ div {
 	padding-top: 1%;
 }
 p {
-	padding-left: 5%;
+	display: inline;
 }
